--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.jpa.show-sql: true
 #config spring security 
 spring.security.user.name=vietthichdung
 spring.security.user.password=123456
+
+#config view engines
+spring.mvc.view.prefix=/WEB-INF/view/
+spring.mvc.view.suffix=.jsp
