--- a/pom.xml
+++ b/pom.xml
@@ -88,10 +88,10 @@
 			<artifactId>spring-boot-starter-validation</artifactId> 
 		</dependency>
 
-		 <!-- <dependency>
+		 <dependency>
 			<groupId>org.springframework.session</groupId>
 			<artifactId>spring-session-jdbc</artifactId>
- 		 </dependency> -->
+ 		 </dependency>
 
 		<dependency>
 			<groupId>org.hibernate.orm</groupId>
