--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,6 @@ spring.mvc.view.suffix=.jsp
 #config file size
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=10MB
+
+#config spring session
+spring.session.jdbc.initialize-schema=always
